fix Dark mode

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20,6 +20,6 @@ button {
 }
 
 button.primary {
-  background-color: '#F5385D';
+  background-color: #F5385D;
   @apply bg-primary p-2 w-full text-white rounded-2xl;
 }
